# prog_25

./: - main.cpp  .gitignore  README.md
1/: LICENSE  README.md
1/src/: BaseComponent.hpp  ButtonComponent.cpp  ButtonComponent.hpp  InputFieldComponent.cpp  InputFieldComponent.hpp  TextComponent.cpp  TextComponent.hpp  VariableDB.cpp  VariableDB.hpp  main.cpp
1/tests/: test_text_component.cpp  test_variable_db.cpp
HMI2_1/: ButtonWidget.cpp  ButtonWidget.hpp  CMakeLists.txt  InputWidget.cpp  InputWidget.hpp  LICENSE  TextWidget.cpp  TextWidget.hpp  VariableManager.cpp  VariableManager.hpp  main.cpp
HMI2_1/include/HMI2/: Button.h  Text.h  Widget.h
HMI2_1/tests/: CMakeLists.txt  test_button_widget.cpp  test_input_widget.cpp  test_variable_manager.cpp
HMI2_3/: main.cpp
PZ/PZ_0_structure/: - main.cpp  func.cpp  func.h  main.cpp
PZ/PZ_1_class/: main.cpp
PZ/PZ_1_structure/: CMakeLists.txt  main.cpp  structs.h  test.txt
PZ/PZ_2_class/: main.cpp
PZ/PZ_2_photo/: main.cpp  photo_PGM.pgm  photo_PGM_lvl_1.pgm  photo_PGM_lvl_5.pgm  rez_1.pgm  rez_3.pgm
PZ/PZ_3_Inheritance/: main.cpp
PZ/PZ_3_photo/: noise.txt  photo_PGM_lvl_3.pgm  rez_5.pgm
PZ/PZ_4_Inheritance/: CMakeLists.txt  main.cpp
PZ/PZ_4_Polymorphism/: 19-11-2025 11-07.csv  main.cpp
PZ/PZ_5_Polymorphism/: CMakeLists.txt  main.cpp
PZ/PZ_6_Exceptions/: CMakeLists.txt  main.cpp
PZ/PZ_9_Templates/: CMakeLists.txt  main.cpp
ПЗ/ПЗ 0 Структуры/: - main.cpp
